# http-fluency.lat

./: .branch-profile  .cursorrules  .gitignore  CLAUDE.md  CODEBASE.md  INFRASTRUCTURE.md  README.md  SECURITY.md  azure-pipelines.yml  azure-pipelines.yml.gold  context_summary.md  database_schema_diagram.md  demo_feedback.jsonl  docker-compose.yml  llms.txt  rules.json  start.sh
.cursor/: mcp.json
.github/: copilot-instructions.md
backend/: CLAUDE.md  Cargo.toml  Dockerfile  README.md
backend/api_main/: Cargo.toml
backend/api_main/src/: config.rs  main.rs
backend/api_main/src/api/: mod.rs
backend/api_main/src/api/dto/: generation.rs  mod.rs  pronoun_practice.rs
backend/api_main/src/api/endpoints/: admin.rs  admin_catalog_preferences.rs  admin_users.rs  agent.rs  assets.rs  auth.rs  decks.rs  features.rs  feedback.rs  generation.rs  mod.rs  notifications.rs  presence.rs  pronoun_practice.rs  tutor.rs
backend/api_main/src/api/mappers/: flashcards.rs  mod.rs  pronoun_practice.rs
backend/api_main/src/api/middleware/: auth.rs  client_ip.rs  mod.rs
backend/api_main/src/application/: batch.rs  batch_audio.rs  mod.rs
backend/api_main/src/application/use_cases/: audio_use_cases.rs  auth.rs  image_use_cases.rs  mod.rs  presence_use_cases.rs  subscription_use_cases.rs  tutor_use_cases.rs
backend/api_main/src/domain/: mod.rs
backend/api_main/src/infrastructure/: agent.rs  mod.rs
backend/api_main/src/infrastructure/ai/: avif_compressor.rs  comfy_provider.rs  compress.rs  elevenlabs_tts_provider.rs  gemini_grpc_provider.rs  gemini_interactions_image_provider.rs  gemini_tts_provider.rs  gemini_voices.rs  mod.rs  pcm_ogg.rs  routing_tts_provider.rs  tts_grpc_provider.rs
backend/api_main/src/infrastructure/media_delivery/: cloudflare_provider.rs  mod.rs  oracle_provider.rs
backend/api_main/src/infrastructure/payment/: mod.rs  null_payment_provider.rs  stripe_provider.rs
backend/api_main/src/infrastructure/storage/: local_repository.rs  mod.rs  null_db_repository.rs  surreal_repository.rs
backend/api_main/src/infrastructure/storage/surreal/: activity_repository.rs  card_progress_repository.rs  connection.rs  daily_stats_repository.rs  mod.rs  models.rs  pronoun_repository.rs  subscription_repository.rs  user_repository.rs
backend/api_main/src/modules/: flashcards.rs  mod.rs  pronoun_practice.rs  shell.rs
backend/core/: Cargo.toml
backend/core/src/domain/models/: flashcard.rs  mod.rs  onboarding.rs  srs.rs  story.rs  subscription.rs  tutor.rs  user.rs  user_activity.rs
backend/core/src/ports/: audio.rs  db_repository.rs  image.rs  media_delivery.rs  mod.rs  payment.rs  storage.rs  tutor.rs
backend/mod_flashcards/: Cargo.toml
backend/mod_flashcards/src/: audio_use_cases.rs  image_use_cases.rs  landing_demo_image_prompt.rs  lib.rs
backend/mod_flashcards/src/batch/: audio.rs  context.rs  image_batch.rs  mod.rs
backend/mod_pronoun/: Cargo.toml
backend/mod_pronoun/src/: lib.rs
backend/mod_shell/: Cargo.toml
backend/mod_shell/src/: auth.rs  daily_stats_use_cases.rs  lib.rs  presence_use_cases.rs  subscription_use_cases.rs  tutor_use_cases.rs
backend/scratch/: 1-basic.json  1-basic_fixed.json  check_gcs.rs  list_voices.rs  repair_json.py  test_tts.rs  universal_repair.py
backend/scratch/backup_json/: adjectives_1-basic.json  adjectives_2-intermediate.json  adjectives_3-advanced.json  adverbs_3-advanced.json  connectors_1-basic.json  connectors_2-intermediate.json  connectors_3-advanced.json  determinant_1-basic.json  determinant_2-intermediate.json  determinant_3-advanced.json  nouns_1-basic.json  nouns_2-intermediate.json  nouns_3-advanced.json  phrasal_verbs_break.json  phrasal_verbs_bring.json  phrasal_verbs_call.json  phrasal_verbs_calm.json  phrasal_verbs_carry.json  phrasal_verbs_check.json  phrasal_verbs_come.json  phrasal_verbs_drop.json  phrasal_verbs_figure.json  phrasal_verbs_find.json  phrasal_verbs_get.json  phrasal_verbs_give.json  phrasal_verbs_go.json  phrasal_verbs_hang.json  phrasal_verbs_look.json  phrasal_verbs_make.json  phrasal_verbs_pick.json  phrasal_verbs_put.json  phrasal_verbs_run.json  phrasal_verbs_set.json  phrasal_verbs_show.json  phrasal_verbs_take.json  phrasal_verbs_turn.json  phrasal_verbs_wake.json  phrasal_verbs_work.json  preposition_1-basic.json  preposition_2-intermediate.json  (+5 more)
backend/src/: config.rs  main.rs
backend/src/api/endpoints/: admin.rs  admin_users.rs  assets.rs  auth.rs  decks.rs  features.rs  generation.rs  health.rs  mod.rs  notifications.rs  presence.rs  story_arcade.rs  tutor.rs
backend/src/api/middleware/: auth.rs  client_ip.rs
backend/src/application/: batch.rs  batch_audio.rs  mod.rs
backend/src/application/use_cases/: audio_use_cases.rs  auth.rs  deck_use_cases.rs  image_use_cases.rs  mod.rs  presence_use_cases.rs  story_use_cases.rs  subscription_use_cases.rs  tutor_use_cases.rs
backend/src/domain/: mod.rs
backend/src/domain/models/: flashcard.rs  mod.rs  story.rs  subscription.rs  user.rs  user_activity.rs
backend/src/domain/repositories/: audio.rs  db_repository.rs  image.rs  image_compressor.rs  mod.rs  payment.rs  storage.rs  tutor.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/ai/: avif_compressor.rs  comfy_provider.rs  compress.rs  gemini_grpc_provider.rs  gemini_tts_provider.rs  gemini_voices.rs  mod.rs  routing_tts_provider.rs  tts_grpc_provider.rs
backend/src/infrastructure/payment/: mod.rs  null_payment_provider.rs  stripe_provider.rs
backend/src/infrastructure/storage/: local_repository.rs  mod.rs  null_db_repository.rs  surreal_repository.rs
client/: .gitignore  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
docs/: ARQUITECTURA_MODULAR.md  ARQUITECTURA_SISTEMA.md  AZURE_PIPELINE_GUIDE.md  DEPLOY_Y_REPOSITORIO.md  EN_ES_CONTENT_AUDIT.md  GIT_BRANCHES.md  GIT_SPARSE_WORKFLOW.md  INCIDENT_REPORT_AUDIO_ORACLE_MODE_2026-07.md  INCIDENT_REPORT_GEMINI_LEAK_2026.md  INTEGRACION_SISTEMA.md  (+4 more)
infra/mcp-server/: Cargo.toml
infra/mcp-server/src/: main.rs
(+6768 files in other folders)
