[package]
name = "mod_flashcards"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
futures = "0.3"
fluency_core = { path = "../core" }
rand = "0.8"
tracing.workspace = true
uuid.workspace = true
