[package]
name = "pronoun_practice"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
theruby_core = { path = "../core" }
tokio.workspace = true
tracing.workspace = true
