[package]
name = "mod_shell"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dashmap.workspace = true
fluency_core = { path = "../core" }
jsonwebtoken = "9.1"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
